--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,8 +27,8 @@ jobs:
 
       # Build dockerfile
       - name: build container
-      - run: docker build ./docker-stuff/ -t hello-container
+        run: docker build ./docker-stuff/ -t hello-container
       
       # Run image
       - name: run container
-      - run: docker run hello-container
+        run: docker run hello-container
